--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "eeia-moteur-recherche",
-  "version": "1.0.0",
-  "description": "Moteur de recherche pour une boutique de vente en ligne",
-  "main": "index.js",
-  "scripts": {
-    "test": "npm test",
-    "build": "webpack --config webpack.config.js --progress --watch",
-    "build-production": "webpack --config webpack.prod.config.js --progress"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fideledegni/eeia-moteur-recherche.git"
-  },
-  "keywords": [
-    "eeia",
-    "eeia2021",
-    "python",
-    "django",
-    "ia",
-    "ml",
-    "info"
-  ],
-  "author": "eeia",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fideledegni/eeia-moteur-recherche/issues"
-  },
-  "homepage": "https://github.com/fideledegni/eeia-moteur-recherche#readme",
-  "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "bootstrap": "^5.0.1",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.6",
-    "mini-css-extract-plugin": "^1.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.34.1",
-    "sass-loader": "^12.1.0",
-    "webpack": "^5.38.1",
-    "webpack-bundle-tracker": "^1.0.0",
-    "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {
-    "axios": "^0.21.1"
-  }
+	"name": "eeia-moteur-recherche",
+	"version": "1.0.0",
+	"description": "Moteur de recherche pour une boutique de vente en ligne",
+	"main": "index.js",
+	"scripts": {
+		"test": "npm test",
+		"build": "webpack --config webpack.config.js --progress --watch",
+		"build-production": "webpack --config webpack.prod.config.js --progress"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/fideledegni/eeia-moteur-recherche.git"
+	},
+	"keywords": [
+		"eeia",
+		"eeia2021",
+		"python",
+		"django",
+		"ia",
+		"ml",
+		"info"
+	],
+	"author": "eeia",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/fideledegni/eeia-moteur-recherche/issues"
+	},
+	"homepage": "https://github.com/fideledegni/eeia-moteur-recherche#readme",
+	"devDependencies": {
+		"@babel/core": "^7.14.5",
+		"@babel/plugin-transform-react-jsx": "^7.14.5",
+		"@babel/plugin-transform-runtime": "^7.14.5",
+		"@babel/preset-env": "^7.14.5",
+		"@babel/preset-react": "^7.14.5",
+		"babel": "^6.23.0",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^8.2.2",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-polyfill": "^6.26.0",
+		"bootstrap": "^5.0.1",
+		"clean-webpack-plugin": "^4.0.0-alpha.0",
+		"css-loader": "^5.2.6",
+		"mini-css-extract-plugin": "^1.6.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"sass": "^1.34.1",
+		"sass-loader": "^12.1.0",
+		"webpack": "^5.38.1",
+		"webpack-bundle-tracker": "^1.0.0",
+		"webpack-cli": "^4.7.2"
+	},
+	"dependencies": {
+		"axios": "^0.21.1",
+		"react-router-dom": "^5.2.0"
+	}
 }
