--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
+# dist/ # Commit the dist folder as webpack bundles js and css in there!
 downloads/
 eggs/
 .eggs/
@@ -219,7 +219,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# dist # Commit the dist folder as webpack bundles js and css in there!
 
 # Gatsby files
 .cache/
