--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"react-dom": "^17.0.2",
 		"sass": "^1.34.1",
 		"sass-loader": "^12.1.0",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"webpack": "^5.38.1",
 		"webpack-bundle-tracker": "^1.0.0",
 		"webpack-cli": "^4.7.2"
