--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ Django==3.2.4
 django-cors-headers==3.7.0
 django-environ==0.4.5
 django-webpack-loader==1.0.0
-environ==1.0
+djangorestframework==3.12.4
 gunicorn==20.1.0
 psycopg2-binary==2.8.6
 pytz==2021.1
 sqlparse==0.4.1
+Unidecode==1.2.0
 whitenoise==5.2.0
