--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ django-cors-headers==3.7.0
 django-environ==0.4.5
 django-webpack-loader==1.0.0
 djangorestframework==3.12.4
+environ==1.0
 gunicorn==20.1.0
+numpy==1.21.1
 psycopg2-binary==2.8.6
 pytz==2021.1
 sqlparse==0.4.1
